# ROS-industriel

./: README.md  driver_ros.job
Ros Staubli/: README.md
Ros Staubli/ros_robot_arm/devel/: .catkin  _setup_util.py  local_setup.sh  setup.sh
Ros Staubli/ros_robot_arm/src/ros_rx60_workspace/src/rx60_description/: CMakeLists.txt  package.xml
Ros Staubli/ros_robot_arm/src/ros_rx60_workspace/src/rx60_description/launch/: rx60_rviz.launch
Ros Staubli/ros_robot_arm/src/ros_rx60_workspace/src/rx60_description/meshes/: arm.dae  base.dae  elbow.dae  forearm.dae  shoulder.dae  tool.dae  wrist.dae
Ros Staubli/ros_robot_arm/src/ros_rx60_workspace/src/rx60_description/urdf/: rx60.gazebo.xacro  rx60.transmission.xacro  rx60.urdf.xacro
Ros Yaskawa/: README.md
ros cognex/src/cognex/: CMakeLists.txt  package.xml
ros schneider/: README.md  client_cellule.py  workspace.code-workspace
ros schneider/com_arm/: load_rx60b.launch  rx60b.urdf
ros schneider/com_arm/msg/: Control_cellule.msg  Joint.msg  Retour_navette.msg
ros schneider/com_arm/src/: app_cellule.cpp  client_cellule_tp.py  control.h  control_cellule.py  control_keyboard.py  etat.h  ihm_cognex.py  log.py  main_cellule.cpp  pick_and_place.cpp  pick_and_place.py  save.py  serveur1_tcp.py  serveur2_tcp.py
ros schneider/pyModbusTCP/pyModbusTCP.egg-info/: PKG-INFO
ros schneider/src/schneider/: CMakeLists.txt  package.xml
ros_cognex/src/: CMakeLists.txt  readme.md
ros_cognex/src/launch/: cognex.launch
ros_cognex/src/msg/: Calib_camera.msg
ros_cognex/src/scripts/: ihm_cognex.py
ros_cognex/src/src/: cognex.h  (+2 more)
(+177 files in other folders)
