<?xml version="1.0"?>
<package>
  <name>rx60_description</name>
  <version>0.1.1</version>
  <description>The rx60_description package</description>

  <maintainer email="chma0038@stud.hs-kl.de">Christopher</maintainer>
  <author email="chma0038@stud.hs-kl.de">Christopher</author>

  <license>GNU GPL-3.0</license>


  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>


  <export>

  </export>
</package>
